# electron_notes

./: Early-stagePlanning.md  README.md  SecondCourseInLinearAlgebra_0_Basic.md  SecondCourseInLinearAlgebra_1_vectorSpace.md  SecondCourseInLinearAlgebra_2_basis.md  chapter01静电学.ipynb  chapter02电势.ipynb  control_system.ipynb  cross-compiling_the_kernel.md
CUDA/: CUDA_Graphs.ipynb  NCVCC编译器相关.ipynb  cpp调用cu_NVrtc.ipynb  cuda_introduction.ipynb  test.md  内存allocFRree于host例子.ipynb  内存于Device管理例子.ipynb  常见例子.ipynb  常见流程.ipynb  高效利用内存.ipynb
c++core_guidelines解析/: AST_cpp2hpp.py  INTERFACES.ipynb  note.ipynb
linuxUserSpace/: crontab.ipynb  googletest.ipynb  meson.ipynb  meson_wrap.ipynb  pkg-config.ipynb  proxys.ipynb  信息显示屏.ipynb
linuxUserSpace/meson_example1/: meson.build
linuxUserSpace/scripts/: Add_build.sh  Build.sh
opamps/: 单电源运放电路接口设计.ipynb
pico2/: pio.ipynb  pio_instruction.ipynb  resources.ipynb
数学函数可视化/: 1.ipynb  2.ipynb  fields.ipynb  泰勒级数.ipynb  滤波.ipynb  逆L变换.ipynb
步进电机相关/: 简易计算.ipynb
